# OpenFIM

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  AUTHORS.md  FIM.html  FIM_installation_and_settings.html  FIM_yaml_config.html  LICENSE.md  LICENSE.txt  README.md  active.html  alumni.html  dataloader_test.py  dfr_casestudy.html  dlr_casestudy.html  environment.yml  eval_tmp.py  genindex.html  huggingface.html  imputation.html  imputation_point_wise.html  imputation_temporal.html  install.sh  intro.html  logging_config.yaml  mjp_crashcourse.html  myst.yml  objects.inv  point_process_crashcourse.html  point_process_tutorial.html  publications.bib  pyproject.toml  requirements.txt  sde.html  sde_tutorial.html  search.html  searchindex.js  setup.cfg  (+1 more)
.github/workflows/: ci.yml  deploy_tutorial.yml  python-app.yml  test.yml  test_tutorial_notebooks.yml
_sources/: FIM.md  FIM_installation_and_settings.md  active.md  dfr_casestudy.ipynb  dlr_casestudy.ipynb  huggingface.ipynb  imputation.ipynb  imputation_point_wise.ipynb  imputation_temporal.ipynb  intro.md  mjp_crashcourse.md  sde.md  sde_tutorial.ipynb  tutorials.md
configs/inference/: easytpp.yml  eval_fim_ode.yaml  eval_fim_ode_sin_data.yaml  fim_windowed.yaml  gsm8k.yaml  synthetic_data_evaluation.yaml
configs/peft/: lora_fimhawkes.yaml
configs/train/: autoregressive_example.yaml  decoderOnly_example.yaml  decoderOnly_synthData.yaml  example.yaml  fim_imputation.yaml  fim_ode.yaml  fim_ode_example.yaml  fim_ode_sin_data.yaml  fim_ode_singleGPU.yaml
data/: .gitignore
docs/: conf.py  requirements.txt
mlruns/0/: meta.yaml
notebooks/: 01_kc_huggingface_ts_datasets_exploration.ipynb  ODEBench_evaluation_FIMBase_results.ipynb  ODEBench_evaluation_results.ipynb  evaluate_results_FIMImpuation.ipynb  fim-ode.ipynb
notebooks/evaluations/: MocapData_FIMImputation.ipynb  NavierData_FIMImputation.ipynb  ODEBench_FIMBase.ipynb  SynthData_FIMImputation.ipynb  SynthData_FIMWindowed.ipynb
notebooks/fim-pp/: hawkes-simulation.ipynb
notebooks/fim-sde/: dataloader.ipynb  model.ipynb
notebooks/hawkes/: easytpp_1D_fit.ipynb  easytpp_datasets_stats.html  easytpp_datasets_stats.ipynb  easytpp_stats_train.py  easytpp_training_config.yaml  em_real_world_datasets.ipynb  em_with_bulks.ipynb  explore_eval_datasets.ipynb  hawkse_stats_train.py  intensity_calculation_example.ipynb  synthetic_datasets_stats.ipynb  synthetic_intensities.ipynb  test.ipynb  test.py
notebooks/imputation/: MocapData_FIMImputation.ipynb  NavierData_FIMImputation.ipynb  ODEBench_FIMBase.ipynb  SynthData_FIMImputation.ipynb  SynthData_FIMWindowed.ipynb
notebooks/ode/: ode.ipynb
notebooks/pp/: em_real_world_datasets.ipynb  em_with_bulks.ipynb  explore_eval_datasets.ipynb
notebooks/sde/: 01_co_load_lightning_trained_model_example.ipynb  02_co_test_fim_sde_dataloader.ipynb  03_ps_data_exploration_of_evaluation_sets.ipynb  04_ps_data_exploration_of_polynomial_drift_and_diffusion.ipynb  05_ps_print_polynomials_surviving_filtering.ipynb  06_ps_check_data_with_vector_fields_at_observations.ipynb  dataloader.ipynb  model.ipynb
notebooks/tutorials/: fim-mjp.ipynb
reports/: BSDE.txt
scripts/: datasetlimit.py  evaluate_timesfm.py  generate_dataset.py  inference.py  jax2torch.py  scratch.py  train_model.py  truncate_hawkes_test_data.py
scripts/data/: convert_hawkes_pt_to_h5.py
scripts/data_generation_with_patterns/: generate_patterned_data.py  verify_patterns.py
scripts/evaluations/: evaluate_FIMImputation_mocap.py  evaluate_FIMImputation_navier_stokes.py  evaluate_FIMImputation_synthData.py  evaluate_FIMMJP.py  evaluate_FIMODE_testSet.py  evaluate_FIMWindowed_ODEBench.py  evaluate_FIMWindowed_SynthData.py  time_series_evaluation.py
scripts/fim-sde/: fim_sde_data_exploration.py  fim_sde_dataloaders.py  fim_sde_evaluation.py  fim_sde_pipelines.py  fim_sde_plots.py  test_fim_sde_dataloaders.py  test_fim_sde_models.py
scripts/hawkes/: easy_tpp_datasets_sequence_stats.py  easy_tpp_next_event_prediction.py  easytpp_benchmark.py  easytpp_benchmark.yaml  easytpp_fit.py  easytpp_grid.py  easytpp_grid.yaml  eval_sampling_methods_gt.py  fim_benchmark.py  fim_benchmark.yaml  fim_benchmark_smoke.yaml  fim_finetune.py  fim_finetune_cdiff.py  fim_infer_network.py  fim_infer_network.yaml  fim_long_horizon_prediction.py  fim_next_event_prediction.py  keep_gpu_busy.py  loglikelihoodtest.py  naive_plots_on_synthetic_datasets.py  naive_plots_on_synthetic_datasets_bulk.py  next_event_prediction.py  otd_metrics.py  tick_1Deasytpp.py  visualize_intensity_prediction_paper.py  visualize_intensity_predictions.py
scripts/helpers/: cdiff_shift_times_to_zero.py  datasetlimit.py  (+6 more)
slurm/: single_node.slurm
tables/: hawkes_dataset_stats.tex
tests/: test_blocks.py  test_collate.py  test_dataloaders.py  test_datasets.py  test_dynamical_systems.py  test_fim_ode.py  test_fim_pipelines.py  test_fim_sde_dataloaders.py  test_fim_sde_evaluation.py  test_fim_sde_evaluations.py  test_fim_sde_models.py  test_fim_sde_pipelines.py  test_fim_sde_plots.py  test_fimsde_dataloaders.py  test_fimsde_models.py  test_grid_interpolator.py  test_hawkes_pipeline.py  test_imputation_concepts.py  test_imputation_pointwise.py  test_imputation_windowing.py  test_models.py  test_ode.py  test_positional_encoding.py  test_schedulers.py  test_sde.py  test_sde_datasets_and_dataloaders.py  test_sde_loss.py  test_sde_normalization.py  test_trainer.py  test_utils.py
tutorial/: FIM.md  _config.yml  _toc.yml  active.md  dfr_casestudy.ipynb  dlr_casestudy_old.ipynb  double_well_duffing_original_trajectories.json  dynamical_systems_data.json  huggingface.ipynb  imputation.ipynb  imputation_point_wise.ipynb  imputation_temporal.ipynb  intro.md  main.md  makefile  mjp_crashcourse.md  myst.yml  point_process_crashcourse.md  point_process_tutorial.ipynb  point_process_tutorial_helper.py  push_to_hub.py  references.bib  requirements.txt  sde.md  sde_tutorial.ipynb  tutorial_helper.py  tutorials.md
varying_context_size/: plot_context_size_smape.py  varying_context_paths_experiment.py
(+815 files in other folders)
