[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "fim"
version = "0.1.0"
description = "Project that contains the models of the FIM series papers."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
   { name = "David Berghaus", email = "david.berghaus@iais.fraunhofer.de" },
   { name = "Kostadin Cvejoski", email = "cvejoski@gmail.com" },
   { name = "Ramses Sanchez", email = "sanchez@cs.uni-bonn.de" },
   { name = "Patrick Seifner", email = "seifner@cs.uni-bonn.de" },

]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10,<3.13"
dependencies = [
   "torch==2.5.0",
   "transformers==4.46.0",
   "datasets",
   "peft",
   "click",
   "numpy",
   "scipy",
   "pandas",
   "tqdm",
   "ipython",
   "matplotlib",
   "ipympl",
   "seaborn",
   "tensorboard",
   "h5py",
   "optimum",
   "pyyaml",
   "jupyterlab",
   "ipywidgets",
   "pytest",
   "pytest-cov",
   "pytest-dependency",
   "tox",
   "pre_commit",
   "nbdime",
   "nbstripout",
   "sphinx",
   "recommonmark",
   "colorlog",
   "torchinfo",
   "ruff",
]


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823", "I001"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff]
line-length = 140

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["fim"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pylint]
disable = [
   "C0103", # Invalid variable name
   "C0114", # Missing module docstring
   #    "C0115",  # Missing class docstring
   #    "C0116",  # Missing function or method docstring
   #    "R0903",  # Too few public methods
   #    "R0913",  # Too many arguments
   #    "R0914",  # Too many local variables
   #    "R0915",  # Too many statements
]
max-line-length = 140
