[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "fim"
version = "0.1.0"
description = "Project that contains the models of the FIM series papers."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
   { name = "David Berghaus", email = "david.berghaus@iais.fraunhofer.de" },
   { name = "Kostadin Cvejoski", email = "cvejoski@gmail.com" },
   { name = "Ramses Sanchez", email = "sanchez@cs.uni-bonn.de" },
   { name = "Patrick Seifner", email = "seifner@cs.uni-bonn.de" },
   { name = "Cesar Ali Ojeda", email = "ojedamarin@uni-potsdam.de" },
   { name = "Manuel Hinz"},
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "click",
    "colorlog",
    "datasets",
    "h5py",
    "ipykernel>=6.30.1",
    "ipympl",
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "matplotlib>=3.10.0",
    "nbdime",
    "nbstripout",
    "numpy",
    "optree>=0.13.1",
    "pandas",
    "peft",
    "pre-commit",
    "pydantic",
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "pytest-env",
    "python-dotenv",
    "pyyaml",
    "recommonmark",
    "ruff",
    "scipy",
    "seaborn",
    "sphinx",
    "tensorboard",
    "torch>=2.5.0",
    "torchdiffeq",
    "torchinfo",
    "torchsde>=0.2.6",
    "tox",
    "tqdm",
    "transformers==4.56.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
env = ["PYTORCH_ENABLE_MPS_FALLBACK=1"]

[tool.ruff]
target-version = "py312"
line-length = 140
extend-exclude = ["tutorial", "notebooks"]

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823", "I001"]
select = ["C", "E", "F", "I", "W"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["fim"]

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.

[tool.pylint]
disable = [
   "C0103", # Invalid variable name
   "C0114", # Missing module docstring
]
max-line-length = 140
